--- a/styless/style.css
+++ b/styless/style.css
@@ -112,11 +112,29 @@
 .img-1{
     height: 50%;
     width: 50%;
-    border: 10px;
+   
 }
-.img-2{
+.img-radient{
+    height: 20%;
+    width: 50%;
+    float: left;
+    /* border-color: aquamarine; */
+
+    border: 10px solid;
+    padding: 10px;
+    border-image-source: linear-gradient(45deg,red,blue);
+    border-image-slice: 1;
+
+    
+   }
+   .img-border{
     height: 20%;
     width: 50%;
     float: right;
-    border: 10px;
+     border: 40px solid;
+     border-color: red; 
+     border-image-source: url("/img/golden-border.jpg");
+     border-image-slice: 80 fill;
+     border-image-repeat: round;
+
    }
