--- a/styless/style.css
+++ b/styless/style.css
@@ -118,6 +118,7 @@
     height: 20%;
     width: 50%;
     float: left;
+    margin-bottom: 10px;
     /* border-color: aquamarine; */
 
     border: 10px solid;
